Rank PvP System updated to latest (H5 rev) Removed permsize from gameserver batch file Some typo Double closed connections remove extra code Eclipse configurations Refactor on achievement contition (was conflict with Level of logger) L2Clan Rename getHasCastle() -> hasCastle() L2Clan Rename getHasHideout() -> hasHideout() Some logs corrected